Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2463

posix test_1: mkfifo.3 and umask.2 failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0, Lustre 2.1.4
    • Lustre 2.4.0, Lustre 2.1.4
    • None
    • 3
    • 5808

      The POSIX compliance testing failed as follows:

      POSIX failures: 2
      
      Test Name                   Baseline   Lustre Report
      mkfifo.3                   Succeeded          Failed
      umask.2                    Succeeded          Failed
      
      FAILURE DESCRIPTIONS:
      
      ####################################################
      Test Name: mkfifo.3 Failed
      
      	Test Description:
      A call to mkfifo() creates a new FIFO special file with file
      permission bits determined by the mode parameter and the file creation
      mask and returns a value of zero.
      Posix Ref: Component MKFIFO Assertion 5.4.2.2-25(A)
      
      	Test Strategy:
      CREATE child process using cppair() - (genlib)
        SET process creation file mode to S_IRUSR|I_IWGRP|S_IXOTH using
        umask()
        FOR each of the access modes: S_IRWXU|S_IRWXG|S_IRWXO,
        S_IXUSR|S_IWGRP|S_ROTH and S_IRUSR|S_IWGRP|S_IXOTH
          IF FIFO already exists (eaccess()) then remove() it
          CREATE FIFO using mkfifo()
          VERIFY that mkfifo() returned 0 and errno was not set
          VERIFY that the new file is a FIFO using S_ISFIFO(st_mode)
      
      	Test Information:
      mkfifo("mkfifo-t.3", 0777) with umask = 0421 set permissions incorrectly
      expected: 0356, observed: 0777
      mkfifo("mkfifo-t.3", 0124) with umask = 0421 set permissions incorrectly
      expected: 0104, observed: 0124
      mkfifo("mkfifo-t.3", 0421) with umask = 0421 set permissions incorrectly
      expected: 0, observed: 0421
      
      ####################################################
      Test Name: umask.2 Failed
      
      	Test Description:
      A call to umask(cmask) sets the file mode creation mask argument cmask
      to turn off permission bits in the mode argument supplied by
      open(path, flags, mode), creat(path, mode), mkdir(path, mode), and
      mkfifo(path, mode).
      Posix Ref: Component UMASK Assertion 5.3.3.2-05(A)
      
      	Test Strategy:
      FOR each mode in a list of access modes:
        SET file mode creation mask using umask() with current mode
        FOR each of the functions open(), creat(), mkdir() and mkfifo()
          REMOVE file using remove()
          VERIFY that the file nolonger exists using eaccess() - (genlib)
          CALL current function
          VERIFY that the current function returned successfully
          OBTAIN file status information using stat()
          VERIFY that st_mode matches the current mode
      REMOVE file using remove()
      
      	Test Information:
      umask(0400) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0377
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	021
      umask(0200) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0577
      umask(0100) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0677
      umask(040) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0737
      umask(020) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0757
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	0401
      umask(010) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0767
      umask(04) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0773
      umask(02) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0775
      umask(01) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0776
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	0420
      umask(0377) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0400
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	0400
      umask(0577) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0200
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected 0
      umask(0677) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0100
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected 0
      umask(077) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	0700
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	0400
      umask(0737) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	040
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected 0
      umask(0757) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	020
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	020
      umask(0767) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	010
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected 0
      umask(0707) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	070
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	020
      umask(0773) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	04
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected 0
      umask(0775) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	02
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected 0
      umask(0776) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	01
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	01
      umask(0770) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected
      	07
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected
      	01
      umask(0777) did not set file creation mask correctly
      mkfifo("umask-t.2", 0777) created file with permissions 0777, expected 0
      mkfifo("umask-t.2", 0421) created file with permissions 0421, expected 0
      

      Maloo report: https://maloo.whamcloud.com/test_sets/561a3ae4-4399-11e2-a9ca-52540035b04c

            laisiyao Lai Siyao
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: